@@ -264,6 +264,11 @@
 # as the user database.
 # This database can be used for long-term and short-term credential mechanisms
 # and it can store the secret value for secret-based timed authentication in TURN RESP API. 
+#
+# Optional connection string parameters for the secure communications (SSL): 
+# ca, capath, cert, key, cipher 
+# (see http://dev.mysql.com/doc/refman/5.0/en/mysql-ssl-set.html for the description).
+#
 # Use string format as below (space separated parameters, all optional):
 #
 #mysql-userdb="host=<host> dbname=<database-name> user=<database-user> password=<database-user-password> port=<port> connect_timeout=<seconds>"
